# logApp

./: CMakeLists.txt  README.md  main.c
cmake/: findBugReports.cmake
